[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matt Koski",email = "maccam912@gmail.com"},
]
dependencies = [
    "playwright",
    "toml",
    "lxml",
    "langchain",
    "pydantic",
    "beautifulsoup4>=4.12.2",
    "openai>=0.27.8",
    "tqdm>=4.66.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.284",
    "mypy>=1.5.0",
    "types-tqdm>=4.66.0.1",
    "types-toml>=0.10.8.7",
]
